<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textColor="@color/black"
        android:text="@string/dominic"
        android:textSize="18sp"
        android:id="@+id/text_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/_998908479989"
        android:id="@+id/text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/img_remove"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/remove_contact"/>
    <ImageView
        android:id="@+id/img_call"
        app:layout_constraintRight_toLeftOf="@id/img_remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/phone"
        android:layout_width="30dp"
        android:layout_marginEnd="15sp"
        android:layout_height="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>